--- a/Index.html
+++ b/Index.html
@@ -61,9 +61,9 @@
         </div>
     <footer>
          <ul class="menu">
-            <li>news</li>
-            <li>news letter</li>
-            <li>login</li>
+             <a href="https://www.google.com.br"><li>news</li></a>
+             <a href="https://www.google.com.br"><li>news letter</li></a>
+             <a href="https://www.google.com.br"><li>login</li></a>
         </ul>
         
         <ul class="social">
